--- a/src/main/resources/templates/add-data.html
+++ b/src/main/resources/templates/add-data.html
@@ -51,18 +51,18 @@
 </nav>
 
 <div class="container mt-3">
-    <form method="post" th:action="@{/home/save-data}" th:object="${formModel}">
+    <form method="post" th:action="@{/home/save-data}" th:object="${formModel}" >
         <div class="row">
             <div class="col-sm-6">
                 <div class="mb-3">
                     <label class="form-label">First name</label>
-                    <input type="text" class="form-control" name="fname" placeholder="First name">
+                    <input type="text" class="form-control" name="first_name" placeholder="First name">
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="mb-3">
                     <label class="form-label">Last name</label>
-                    <input type="text" class="form-control" name="lname" placeholder="Last name">
+                    <input type="text" class="form-control" name="last_name" placeholder="Last name">
                 </div>
             </div>
             <div class="col-sm-6">
