--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add data</title>
+    <title>Edit user data</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
@@ -22,7 +22,7 @@
                     <a class="nav-link active" aria-current="page" th:href="@{/home/index}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="add-data">Add data</a>
+                    <a class="nav-link" th:href="@{/home/add-data}">Add data</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -56,25 +56,25 @@
             <div class="col-sm-6">
                 <div class="mb-3">
                     <label class="form-label">First name</label>
-                    <input type="text" class="form-control"  name="first_name" placeholder="First name">
+                    <input type="text" class="form-control" th:value="${user.first_name}" name="first_name" placeholder="First name">
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="mb-3">
                     <label class="form-label">Last name</label>
-                    <input type="text" class="form-control" name="last_name" placeholder="Last name">
+                    <input type="text" class="form-control" th:value="${user.last_name}" name="last_name" placeholder="Last name">
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="mb-3">
                     <label class="form-label">Email address</label>
-                    <input type="email" class="form-control" name="email" placeholder="Email">
+                    <input type="email" class="form-control"  th:value="${user.email}" name="email" placeholder="Email">
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="mb-3">
                     <label class="form-label">Phone</label>
-                    <input type="number" class="form-control" name="phone" placeholder="Phone">
+                    <input type="number" class="form-control" th:value="${user.phone}" name="phone" placeholder="Phone">
                 </div>
             </div>
 
